--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Commander Sunita Williams & Sadhguru Explore Aliens, Space Missions & Consciousness</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">45 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Juicy. Melty. Perfect. Cheeseburger #food #shorts</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>What taxes will they increase at the Budget next month?</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -673,7 +673,7 @@
                     <div class="video-info">
                         <h3>What is Sadhguru’s Daily Routine? @curly.tales asks</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1076,9 +1076,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=F6ZfZchnwXk" target="_blank">
-                    <img src="https://i.ytimg.com/vi/F6ZfZchnwXk/mqdefault.jpg" alt="This Was my  Grandma favorite pizza To make">
+                    <img src="https://i.ytimg.com/vi/F6ZfZchnwXk/mqdefault.jpg" alt="How to make Grandma Style Pizza At Home In The Same Day">
                     <div class="video-info">
-                        <h3>This Was my  Grandma favorite pizza To make</h3>
+                        <h3>How to make Grandma Style Pizza At Home In The Same Day</h3>
                         <div class="channel">Vito Iacopelli</div>
                         <div class="date">1 week ago</div>
                     </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>What taxes will they increase at the Budget next month?</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Commander Sunita Williams & Sadhguru Explore Aliens, Space Missions & Consciousness</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">45 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7447,7 +7447,7 @@
                         <div class="video-info">
                             <h3>What is Sadhguru’s Daily Routine? @curly.tales asks</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>Juicy. Melty. Perfect. Cheeseburger #food #shorts</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8819,9 +8819,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=F6ZfZchnwXk" target="_blank">
-                        <img src="https://i.ytimg.com/vi/F6ZfZchnwXk/mqdefault.jpg" alt="This Was my  Grandma favorite pizza To make">
+                        <img src="https://i.ytimg.com/vi/F6ZfZchnwXk/mqdefault.jpg" alt="How to make Grandma Style Pizza At Home In The Same Day">
                         <div class="video-info">
-                            <h3>This Was my  Grandma favorite pizza To make</h3>
+                            <h3>How to make Grandma Style Pizza At Home In The Same Day</h3>
                             <div class="channel">Vito Iacopelli</div>
                             <div class="date">1 week ago</div>
                         </div>
