--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Commander Sunita Williams & Sadhguru Explore Aliens, Space Missions & Consciousness</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">11 minutes ago</div>
+                        <div class="date">28 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,16 +134,16 @@
                     <div class="video-info">
                         <h3>Michael Singer - Exploring Spiritual Evolution</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=qjJpg81UKqY" target="_blank">
-                    <img src="https://i.ytimg.com/vi/qjJpg81UKqY/mqdefault.jpg" alt="Commander Sunita Williams & Sadhguru Explore Aliens, Space Missions & Consciousness">
+                    <img src="https://i.ytimg.com/vi/qjJpg81UKqY/mqdefault.jpg" alt="Do Aliens Exist? – NASA Astronaut Sunita Williams & Sadhguru at Harvard Medical School">
                     <div class="video-info">
-                        <h3>Commander Sunita Williams & Sadhguru Explore Aliens, Space Missions & Consciousness</h3>
+                        <h3>Do Aliens Exist? – NASA Astronaut Sunita Williams & Sadhguru at Harvard Medical School</h3>
                         <div class="channel">Sadhguru</div>
                         <div class="date">3 hours ago</div>
                     </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 15.10.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Testing 100 Stocks in a Single MT5 Backtest (Free Code Setup)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -563,7 +563,7 @@
                     <div class="video-info">
                         <h3>The Big Challenge Before Humanity | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 15.10.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5105,7 +5105,7 @@
                         <div class="video-info">
                             <h3>Testing 100 Stocks in a Single MT5 Backtest (Free Code Setup)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Commander Sunita Williams & Sadhguru Explore Aliens, Space Missions & Consciousness</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">11 minutes ago</div>
+                            <div class="date">28 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,16 +7249,16 @@
                         <div class="video-info">
                             <h3>Michael Singer - Exploring Spiritual Evolution</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=qjJpg81UKqY" target="_blank">
-                        <img src="https://i.ytimg.com/vi/qjJpg81UKqY/mqdefault.jpg" alt="Commander Sunita Williams & Sadhguru Explore Aliens, Space Missions & Consciousness">
+                        <img src="https://i.ytimg.com/vi/qjJpg81UKqY/mqdefault.jpg" alt="Do Aliens Exist? – NASA Astronaut Sunita Williams & Sadhguru at Harvard Medical School">
                         <div class="video-info">
-                            <h3>Commander Sunita Williams & Sadhguru Explore Aliens, Space Missions & Consciousness</h3>
+                            <h3>Do Aliens Exist? – NASA Astronaut Sunita Williams & Sadhguru at Harvard Medical School</h3>
                             <div class="channel">Sadhguru</div>
                             <div class="date">3 hours ago</div>
                         </div>
@@ -7414,7 +7414,7 @@
                         <div class="video-info">
                             <h3>The Big Challenge Before Humanity | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
