--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Top Five Most Effective Oscillators</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">42 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Exploring Spiritual Evolution</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 15.10.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Testing 100 Stocks in a Single MT5 Backtest (Free Code Setup)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>…I am Done With the World | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -838,7 +838,7 @@
                     <div class="video-info">
                         <h3>Slippage & Commission: Trading Costs Explained! #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -1509,7 +1509,7 @@
                     <div class="video-info">
                         <h3>ChatGPT's False Facts: My Son's Kevin Davey Story! #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>Top Five Most Effective Oscillators</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">42 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 15.10.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5116,7 +5116,7 @@
                         <div class="video-info">
                             <h3>Testing 100 Stocks in a Single MT5 Backtest (Free Code Setup)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5369,7 +5369,7 @@
                         <div class="video-info">
                             <h3>Slippage & Commission: Trading Costs Explained! #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -5688,7 +5688,7 @@
                         <div class="video-info">
                             <h3>ChatGPT's False Facts: My Son's Kevin Davey Story! #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Exploring Spiritual Evolution</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7282,7 +7282,7 @@
                         <div class="video-info">
                             <h3>…I am Done With the World | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
