--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>Trading Research: Why Slippage & Commission Matter #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -662,7 +662,7 @@
                     <div class="video-info">
                         <h3>Vastu – Myth or Science? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -772,7 +772,7 @@
                     <div class="video-info">
                         <h3>Backtest Accuracy: Matching Your Live Trading Results #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5127,7 +5127,7 @@
                         <div class="video-info">
                             <h3>Trading Research: Why Slippage & Commission Matter #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -5347,7 +5347,7 @@
                         <div class="video-info">
                             <h3>Backtest Accuracy: Matching Your Live Trading Results #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7447,7 +7447,7 @@
                         <div class="video-info">
                             <h3>Vastu – Myth or Science? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
