--- a/index.html
+++ b/index.html
@@ -2294,7 +2294,7 @@
                     <div class="video-info">
                         <h3>Are you a nihilist?</h3>
                         <div class="channel">Einzelgänger</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Sep 17, 2025</div>
                     </div>
                 </a>
             </div>
@@ -7788,7 +7788,7 @@
                         <div class="video-info">
                             <h3>Are you a nihilist?</h3>
                             <div class="channel">Einzelgänger</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Sep 17, 2025</div>
                         </div>
                     </a>
                 </div>
