--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN AMONG US POKEMON CHAOS MODE</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -343,7 +343,7 @@
                     <div class="video-info">
                         <h3>Trading Research: Why Slippage & Commission Matter #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -871,7 +871,7 @@
                     <div class="video-info">
                         <h3>Backtest Accuracy: Matching Your Live Trading Results #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5171,7 +5171,7 @@
                         <div class="video-info">
                             <h3>Trading Research: Why Slippage & Commission Matter #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5391,7 +5391,7 @@
                         <div class="video-info">
                             <h3>Backtest Accuracy: Matching Your Live Trading Results #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -9572,7 +9572,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN AMONG US POKEMON CHAOS MODE</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
